<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?bgLight">

    <include layout="@layout/custom_toolbar" />

    <!--Row 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@drawable/bg_rectangle"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_4sdp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/notification"
            android:textColor="?attr/colorPrimary"
            />
        <Switch
            android:id="@+id/switchNotification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"/>

    </LinearLayout>

    <!--Row 2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100"
        android:background="@drawable/bg_rectangle"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_4sdp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language"
            android:textColor="?attr/colorPrimary"/>
            <Spinner
                android:id="@+id/spLanguage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/array_language"
                android:padding="@dimen/_4sdp"
                />

    </LinearLayout>

    <!--Row 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:background="@drawable/bg_rectangle"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:padding="@dimen/_4sdp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="80"
            android:text="@string/dark_theme"
            android:textColor="?attr/colorPrimary"
            />
        <Switch
            android:id="@+id/switchDarkTheme"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"/>

    </LinearLayout>

</LinearLayout>