<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardBackgroundColor="?bgCard"
    >


    <LinearLayout
        android:id="@+id/cardLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="100">


        <ImageView
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_weight="15"
            android:padding="12dp"
            android:src="@drawable/ic_tea"
            android:tint="?textHighlight" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="85"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sample_consignment"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvConsignment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=": XXXXXX"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="?textHighlight"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/flc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="?textHighlight"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvFlc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 35"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="?textHighlight"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_by"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvDoneUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" Agnext Operator"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="?textHighlight"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done_on"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 7 Jan, 2020 "
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="?textHighlight"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/at"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=" 11:00 PM"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="?textHighlight"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>